fix spacing and padding issues

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -43,6 +43,7 @@
   margin: 0;
   padding: 0;
   list-style: none;
+  font-size: 16px;
 }
 
 .sidebar-nav li {
@@ -55,6 +56,7 @@
   text-indent: 0;
   line-height: 20px;
   color: #999999;
+  font-size: 13px;
 }
 
 .sidebar-nav li a {
@@ -76,7 +78,7 @@
 
 .sidebar-nav > .sidebar-brand {
   height: 65px;
-  font-size: 22px;
+  font-size: 24px;
   line-height: 60px;
 }
 
@@ -92,10 +94,6 @@
 #sidebar-text > {
   margin: 15px;
   color: #999999;
-}
-
-.search {
-  margin-left: 33px;
 }
 
 @media(min-width:768px) {
@@ -131,21 +129,21 @@
   color: #999999 !important;
   font-size: 14px !important;
   font-weight: 400 !important;
-  padding-left: 10px;
+  padding-left: 20px;
 }
 
 .panel-title a:hover {
   text-decoration: none;
   color: #fff;
   background: rgba(255,255,255,0.2);
-  padding: 11px 180px 11px 20px;
-  margin-left: -20px;
+  padding: 11px 180px 11px 30px;
+  margin-left: -30px;
   width: 100%;
 }
 
 .list-group {
   margin: 0;
-  padding: 10px;
+  padding: 10px 10px 10px 30px !important;
   border-radius: 0;
 }
 
